--- a/mainframe.html
+++ b/mainframe.html
@@ -52,6 +52,7 @@ body {
 <p class="Estilo1"><a href="otras ligas.html" target="mainFrame">Otras ligas</a></p>
 <p class="Estilo1"><a href="musica.html" target="mainFrame">Musica</a></p>
 <p class="Estilo1"><a href="videos.html" target="mainFrame">Videos</a></p>
+<p class="Estilo1"><a href="Flash.htm" target="mainFrame">Flash	</a></p>
 <p class="Estilo1"><a href="contacto.html" target="mainFrame">Contacto   </a></p>
 <p class="Estilo1">&nbsp;</p>
 <p class="Estilo1">&nbsp;</p>
